<resources>
    <string name="app_name">نرم افزار راسن</string>
    <string name="exit_app">خروج</string>
    <string name="popup_exit_app">خروج از نرم افزار؟</string>
    <string name="login">ورود</string>
    <string name="email">ایمیل</string>
    <string name="password">رمز عبور</string>
    <string name="forgot_password_sent">کلمه ی عبور شما از طریق ایمیل برایتان ارسال خواهد شد.</string>
    <string name="register">ثبت نام</string>
    <string name="forgot_password">فراموشی رمز عبور</string>
    <string name="username">نام کاربری</string>
    <string name="name">نام</string>
    <string name="password_repeat">تکرار رمز عبور</string>
    <string name="save">ذخیره</string>
    <string name="help">راهنما</string>
    <string name="search">جستجو</string>
    <string name="products">محصولات</string>
    <string name="enter_search_keywords">متنی را جهت جستجو وارد نمایید.</string>
    <string name="no_location_found">مکان شما تشخیص داده نشده است, لطفأ مکانی را جهت جستجو انتخاب نمایید.</string>
    <string name="profile">حساب کاربری</string>
    <string name="profile_edit_profile">ویرایش حساب</string>
    <string name="old_password">رمز عبور قبلی</string>
    <string name="new_password">رمز عبور جدید</string>
    <string name="change_password">تغییر رمز عبور</string>
    <string name="password_will_change">کلمه ی عبور پس از ذخیره ی تغییرات تغییر خواهد یافت.</string>
    <string name="email_will_change">آدرس ایمیل پس از ذخیره ی تغییرات تغییر خواهد یافت.</string>
    <string name="enter_valid_username">نام کاربری حدأقل 4 حرفی بوده و تنها می تواند از حروف انگلیسی, اعداد, . یا _ تشکیل شود.</string>
    <string name="enter_valid_business_id">شناسه ی کسب و کار حدأقل 4 حرفی بوده و تنها می تواند از حروف انگلیسی, اعداد, . یا _ تشکیل شود.</string>
    <string name="enter_valid_name">نام حدأقل 3 حرفی بوده و تنها می تواند از حروف انگلیسی و فارسی, اعداد, فاصله, . یا _ تشکیل شود.</string>
    <string name="enter_valid_email">لطفأ آدرس ایمیل را به طور صحیح وارد نمایید.</string>
    <string name="enter_password_5_digits">لطفأ رمز عبور حدأقل 5 رقمی را وارد نمایید.</string>
    <string name="enter_same_passwords">رمز های عبور وارد شده مطابقت ندارند.</string>
    <string name="enter_is_too_long">طولانی تر از حد مجاز می باشد.</string>
    <string name="enter_valid_price">قیمت محصول را به صورت عدد وارد نمایید.</string>
    <string name="comment_is_too_short">نظر خود را با حدأقل 3 حرف وارد کنید.</string>
    <string name="choose_category_first">لطفأ موضوع فعالیت کسب و کار خود را تعیین نمایید.</string>
    <string name="ok">تأیید</string>
    <string name="enter_business_description">لطفأ توضیحاتی در خصوص کسب و کار وارد نمایید.</string>
    <string name="err_business_does_not_exist">BUSINESS DOES NOT EXIST! Error:04</string>
    <string name="err_post_does_not_exist">POST DOES NOT EXIST! Error:05</string>
    <string name="err_json_serialization">CAN NOT SERIALIZE TO JSON! Error:06</string>
    <string name="err_further_development">Need Further Development! Error:07</string>
    <string name="err_empty_post_request">EMPTY OR INVALID BODY FOR POST REQUEST! Error:08</string>
    <string name="err_invalid_base64_string">INVALID BASE64 STRING! Error:09</string>
    <string name="err_database_constraints_violation">DATA BASE CONSTRAINTS VIOLATION! Error: 10</string>
    <string name="err_block_does_not_exist">BLOCK DOES NOT EXIST! Error: 11</string>
    <string name="err_comment_does_not_exist">COMMENT DOES NOT EXIST! Error: 12</string>
    <string name="err_follow_already_exist">FOLLOW ALREADY EXISTS! Error: 13</string>
    <string name="err_follow_does_not_exist">FOLLOW DOES NOT EXIST! Error: 14</string>
    <string name="err_friend_request_does_not_exist">FRIEND REQUEST DOES NOT EXIST! Error: 15</string>
    <string name="err_image_does_not_exist">IMAGE DOES NOT EXIST! Error: 16</string>
    <string name="err_no_rate">NO RATE! Error: 17</string>
    <string name="err_no_review">NO REVIEW! Error: 18</string>
    <string name="err_login_password_re_enter">رمز عبور و تکرار آن یکسان نیستند.</string>
    <string name="err_login_password_short">رمز عبور باید حداقل 6 کاراکتر باشد.</string>
    <string name="err_login_email_invalid">آدرس ایمیل نامعتبر است.</string>
    <string name="err_login_account_name_long">تعداد کاراکترهای نام کاربری بیش از حد مجاز است.</string>
    <string name="err_login_name_long">تعداد کاراکترهای نام بیش از حد مجاز است.</string>
    <string name="err_login_about_me_long">تعداد کاراکترهای درباره من بیش از حد مجاز است.</string>
    <string name="err_login_server">خطای برقرار ارتباط با سرور.</string>
    <string name="err_login_password_incorrect">رمز عبور اشتباه است. مجددا سعی نمایید</string>
    <string name="err_login_email_incorrect">چنین آدرس پست الکترونیکی ثبت نشده است. مجددا سعی نمایید</string>
    <string name="err_profile_edit_password_old_incorrect">رمز عبور صحیح نمی باشد.</string>
    <string name="err_set_picture">لطفأ تصویری را انتخاب کنید.</string>
    <string name="err_execution">Execution Error</string>
    <string name="err_none">None</string>
    <string name="err_unknown">UNKNOW ERROR! Error:00</string>
    <string name="err_database_connection">ارتباط برقرار نشد. مجددا سعی نمایید</string>
    <string name="err_user_dose_not_exist">USER DOES NOT EXIST! Error:02</string>
    <string name="err_password_incorrect">رمز عبور اشتباه است</string>
    <string name="err_location">لطفأ موقعیت کسب و کار خود را تعیین کنید.</string>
    <string name="time_now">همین الآن!</string>
    <string name="time_year">سال</string>
    <string name="time_month">ماه</string>
    <string name="time_week">هفته</string>
    <string name="time_day">روز</string>
    <string name="time_hour">ساعت</string>
    <string name="time_minute">دقیقه</string>
    <string name="time_ago">پیش</string>
    <string name="about">درباره ی ما</string>
    <string name="profile_edit">مشخصات</string>
    <string name="password_change">تغییر رمز عبور</string>
    <string name="birthday">روز تولد</string>
    <string name="status">توضیحات</string>
    <string name="friend_request">درخواست دوستی</string>
    <string name="profile_edit_business">ویرایش اطلاعات کسب و کار</string>
    <string name="profile_edit_business_text">اطلاعات کسب و کار خود را مشاهده و در صورت تمایل تغییراتی در آن اعمال کنید.</string>
    <string name="profile_edit_delete_text">این کسب و کار و تمام محصولات آن را از حساب خود حذف کنید.</string>
    <string name="follow_request">دنبال کردن</string>
    <string name="followers">دنبال کنندگان</string>
    <string name="followers_num">دنبال کننده</string>
    <string name="friend_requests">درخواست های دوستی</string>
    <string name="accept_or_ignore_requests">درخواست ها را تأیید و یا رد کنید.</string>
    <string name="invalid_birthday">خطا در تاریخ تولد وارد شده!</string>
    <string name="search_title">عنوان جستجو</string>
    <string name="search_in">جستجو در</string>
    <string name="nearby">نزدیک من</string>
    <string name="searching_for">جستجوی</string>
    <string name="in">در</string>
    <string name="search_nearby">جستجوی اطراف</string>
    <string name="filter">فیلتر:</string>
    <string name="filter_all">فیلتر: تمام موضوعات</string>
    <string name="search_businesses">جستجوی کسب و کار ها</string>
    <string name="search_products">جستجوی محصولات</string>
    <string name="choose_category">انتخاب موضوع</string>
    <string name="selected_location">جستجوی مکان انتخابی</string>
    <string name="no_results_found">جستجو نتیجه ای در بر نداشت.</string>
    <string name="search_users">جستجوی کاربران</string>
    <string name="comments">نظرات</string>
    <string name="business_id">شناسه ی کسب و کار</string>
    <string name="business_settings">تنظیمات کسب و کار</string>
    <string name="delete_business">حذف کسب و کار</string>
    <string name="unfollow_business">خارج کردن از لیست کسب و کار ها</string>
    <string name="popup_unfollow_business">آیا میخواهید این کسب و کار را از لیست کسب و کار های دنبال شده ی خود حذف کنید؟</string>
    <string name="friends">دوستان</string>
    <string name="friend">دوست</string>
    <string name="friends_set">با فعال کردن این گزینه به دوستان خود امکان می دهید لیست دوستان شما را مشاهده کنند.</string>
    <string name="settings">تنظیمات</string>
    <string name="businesses">کسب و کار ها</string>
    <string name="business">کسب و کار</string>
    <string name="businesses_set">با فعال کردن این گزینه به دوستان خود امکان می دهید کسب و کار های مورد علاقه ی شما را مشاهده کنند.</string>
    <string name="reviews">نقد ها</string>
    <string name="review">نقد</string>
    <string name="reviews_set">با فعال کردن این گزینه به دوستان خود امکان می دهید نقد های شما را مشاهده کنند.</string>
    <string name="new_review">نقد کنید</string>
    <string name="settings_saved">ذخیره سازی انجام شد.</string>
    <string name="share">به اشتراک گذاری</string>
    <string name="report">گزارش تخلف</string>
    <string name="edit">ویرایش</string>
    <string name="delete">حذف</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="exit">خروج از حساب</string>
    <string name="delete_post">حذف مطلب</string>
    <string name="popup_delete">آیا میخواهید مطلب خود را حذف نمایید؟</string>
    <string name="popup_share">آیا میخواهید این مطلب را به اشتراک بگذارید؟</string>
    <string name="popup_report">آیا میخواهید گزارش تخلف این مطلب را ثبت کنید؟</string>
    <string name="delete_comment">حذف نظر</string>
    <string name="popup_delete_comment">آیا میخواهید نظر خود را حذف نمایید؟</string>
    <string name="popup_delete_comment_from_my_business">آیا میخواهید این نظر را از روی محصول خود بردارید؟</string>
    <string name="popup_delete_friend">آیا میخواهید شخص را از لیست دوستان خود حذف نمایید؟</string>
    <string name="delete_review">حذف نظر</string>
    <string name="popup_delete_review">آیا میخواهید نقد خود را حذف نمایید؟</string>
    <string name="block">مسدود سازی</string>
    <string name="block_follower">مسدود سازی دنبال کننده</string>
    <string name="popup_block_follower">آیا میخواهید دسترسی کاربر به کسب و کار خود را مسدود نمایید؟</string>
    <string name="unblock_follower">آزادسازی حساب</string>
    <string name="popup_unblock_follower">آیا میخواهید دسترسی کاربر به کسب و کار خود را آزاد نمایید؟</string>
    <string name="popup_delete_business">با این کار تمام محصولات این کسب و کار برای همیشه حذف خواهند شد.\n\nاز تصمیم خود مطمئن هستید؟</string>
    <string name="popup_warning">توجه!</string>
    <string name="delete_friend">لغو دوستی</string>
    <string name="enter_your_comment">نظر خود را بنویسید&#8230;</string>
    <string name="send">ارسال</string>
    <string name="FARVARDIN">فروردین</string>
    <string name="ORDIBEHESHT">اردیبهشت</string>
    <string name="KHORDAD">خرداد</string>
    <string name="TIR">تیر</string>
    <string name="MORDAD">مرداد</string>
    <string name="SHAHRIVAR">شهریور</string>
    <string name="MEHR">مهر</string>
    <string name="ABAN">آبان</string>
    <string name="AZAR">آذر</string>
    <string name="DEY">دی</string>
    <string name="BAHMAN">بهمن</string>
    <string name="ESFAND">اسفند</string>
    <string name="image_file_path">/Image/</string>
    <string name="business_name">نام کسب و کار</string>
    <string name="business_address">موقعیت کسب و کار را تعیین کنید</string>
    <string name="business_description">توضیحات کسب و کار</string>
    <string name="new_business">کسب و کار جدید</string>
    <string name="enter_working_time">ساعات کار را تعیین کنید</string>
    <string name="phone">تلفن تماس</string>
    <string name="website">وب سایت</string>
    <string name="submit">ثبت</string>
    <string name="product_name">نام محصول</string>
    <string name="product_price">قیمت</string>
    <string name="product_code">کد کالا</string>
    <string name="product_info">اطلاعات محصول</string>
    <string name="product_description">توضیحات محصول</string>
    <string name="new_email">ایمیل جدید</string>
    <string name="change_email">تغییر آدرس ایمیل</string>
</resources>