<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/rl_post_actionbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"
        android:background="@color/button_on_dark" >

        <ImageButton
            android:layout_width="@dimen/actionbar_height"
            android:layout_height="@dimen/actionbar_height"
            android:background="@drawable/style_button_menu"
            android:src="@drawable/ic_menu_back"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_margin="8dp"
            android:scaleType="centerInside"
            android:onClick="back"
            android:contentDescription="@null"/>

        <ir.rasen.myapplication.ui.TextViewFont
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionbar_height"
            android:textSize="24sp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text = "@string/product_info" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_post_actionbar"
        android:background="@color/background" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_new_post_step2_post"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_edittext_name"
                android:layout_centerHorizontal="true"
                android:scaleType="centerInside"
                android:layout_margin="@dimen/activity_vertical_margin_1of8"
                android:contentDescription="@null"
                android:onClick="setPicture"/>

            <ir.rasen.myapplication.ui.EditTextFont
                android:id="@+id/edt_post_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="@dimen/activity_horizontal_margin_2x"
                android:paddingRight="@dimen/activity_horizontal_margin_2x"
                android:textSize="@dimen/text_size_normal"
                android:inputType="text"
                android:drawableLeft="@drawable/ic_edittext_email"
                android:hint="@string/product_name" />

            <ir.rasen.myapplication.ui.EditTextFont
                android:id="@+id/edt_post_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="@dimen/activity_horizontal_margin_2x"
                android:paddingRight="@dimen/activity_horizontal_margin_2x"
                android:textSize="@dimen/text_size_normal"
                android:inputType="text"
                android:drawableLeft="@drawable/ic_edittext_email"
                android:hint="@string/product_price" />

            <ir.rasen.myapplication.ui.EditTextFont
                android:id="@+id/edt_post_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_code"
                android:gravity="center"
                android:paddingLeft="@dimen/activity_horizontal_margin_2x"
                android:paddingRight="@dimen/activity_horizontal_margin_2x"
                android:textSize="@dimen/text_size_normal"
                android:inputType="textWebEditText"
                android:selectAllOnFocus="true"
                android:drawableLeft="@drawable/ic_edittext_status" />

            <ir.rasen.myapplication.ui.EditTextFont
                android:id="@+id/edt_post_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/edt_multi_line_min_height"
                android:hint="@string/product_description"
                android:background="@drawable/style_view"
                android:layout_margin="@dimen/activity_vertical_margin_half"
                android:paddingLeft="@dimen/activity_horizontal_margin_2x"
                android:paddingRight="@dimen/activity_horizontal_margin_2x"
                android:textSize="@dimen/text_size_normal"
                android:inputType="textMultiLine"
                android:selectAllOnFocus="true" />

            <ir.rasen.myapplication.ui.ButtonFont
                android:id="@+id/btn_post_submit"
                android:layout_width="100dp"
                android:layout_height="@dimen/button_height"
                android:gravity="center"
                android:text="@string/submit"
                android:layout_marginTop="16dp"
                android:textColor="@android:color/white"
                android:background="@drawable/style_button_on_dark"
                android:textSize="@dimen/text_size_large"
                android:onClick="submit" />

            <ir.rasen.myapplication.ui.TextViewFont
                android:id="@+id/btn_post_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/help"
                android:textSize="@dimen/text_size_large"
                android:clickable="true"
                android:onClick="help" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>